--- a/components/mentor-card/mentor-card.module.css
+++ b/components/mentor-card/mentor-card.module.css
@@ -25,3 +25,21 @@
     font-size: 8px;
     text-align: end;
 }
+
+@media (max-width: 767px) {
+    .container {
+        padding: 16px 20px 4px 20px;
+    }
+
+    .texts {
+        font-family: var(--font-inter-tight);
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 19px;
+        margin: 4px 0 0 0;
+    }
+
+    .caption {
+        display: none;
+    }
+}
