--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,5 +1,5 @@
 .container {
-    background: url("/background.png") 0 -40px;
+    background: url("/background.png");
     padding: 0 10px 80px 10px;
 }
 
@@ -18,8 +18,7 @@
 .triangle {
     position: relative;
     width: fit-content;
-    margin-top: -200px;
-    margin-left: -30px;
+    margin-top: -100px;
 }
 
 .triangleContent {
@@ -50,6 +49,7 @@
     line-height: 22px;
     text-align: right;
     color: #1D30DB;
+    align-self: end;
 }
 
 .caption {
@@ -86,34 +86,48 @@
     justify-content: space-between;
 }
 .mentorsWrapper {
-    margin-top: 90px;
+    margin-top: 100px;
 }
 
 .mentors {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-gap: 14px;
     margin-top: 20px;
 }
 
+.mentorsTitle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 80px;
+}
+
 .partnersWrapper {
-    margin-top: 94px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 40px;
+}
+
+.partnersBlock {
+    display: grid;
+    grid-template-columns: 1.2fr 2fr;
+    grid-column-gap: 20px;
+}
+
+.partnersTriangles {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .partners {
     display: flex;
 }
 
-.partnersBottom {
-    display: grid;
-    grid-template-columns: 1.2fr 1fr;
-}
-
 .partner {
-    margin-left: -100px;
+    margin-left: -80px;
 }
 
 .partnersCaption {
@@ -124,13 +138,29 @@
     margin-left: 50px;
 }
 
+.partnersInfo {
+    display: flex;
+    flex-direction: column;
+}
+
+.partnersList {
+    margin-top: 0;
+    font-family: var(--font-inter-tight);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+}
+
 .expectationsWrapper {
     margin-top: 100px;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-column-gap: 20px;
 }
 
 .expectationsTriangleWrapper {
     display: flex;
-    gap: 50px;
     align-items: center;
     justify-content: center;
 }
@@ -140,6 +170,15 @@
     width: fit-content;
 }
 
+.expectationsTriangleMain {
+    z-index: 20;
+    position: relative;
+}
+
+.expectationsTriangleBack {
+    position: absolute;
+}
+
 .expectationsTriangleContent {
     text-align: center;
     position: absolute;
@@ -147,6 +186,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     min-width: 100%;
+    z-index: 20;
 }
 
 .expectationsTriangleEmoji {
@@ -166,25 +206,14 @@
 .expectationsCaptions {
     display: flex;
     flex-direction: column;
-    gap: 52px;
+    gap: 40px;
     justify-content: start;
-}
-
-.expectationsCaption1, .expectationsCaption2, .expectationsCaption3 {
-    max-width: 300px;
-}
-
-.expectationsCaption1 {
-    margin-left: -100px;
-}
-
-.expectationsCaption2 {
-    margin-left: -50px;
 }
 
 .faq {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-column-gap: 24px;
     margin-top: 100px;
     padding: 0 54px;
 }
@@ -197,9 +226,9 @@
 
 .borderedList {
     border: #FFFFFF 1px solid;
-    border-radius: 35px;
+    border-radius: 13px;
     padding: 32px 16px;
-    margin-left: 40px;
+    margin-left: 10px;
     margin-top: 20px;
     background-color: #0E100F;
     font-family: var(--font-inter-tight);
@@ -215,13 +244,12 @@
     font-weight: 700;
     line-height: 24px;
     text-align: left;
-
 }
 
 .faqButton {
     margin-top: 25px;
-    margin-left: 40px;
-    width: calc(100% - 100px) !important;
+    margin-left: 10px;
+    width: calc(100% - 10px) !important;
     align-self: center;
 }
 
@@ -235,6 +263,24 @@
     color: #1D30DB;
 }
 
+.bottomButtons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 60px 100px 0 100px;
+}
+
+.sns {
+    display: flex;
+    gap: 100px;
+    font-family: var(--font-fira-mono);
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    text-align: left;
+    color: #1D30DB;
+}
+
 .getInTouchButton {
     color: #0E100F !important;
     padding: 10px !important;
@@ -243,8 +289,6 @@
     line-height: 18px !important;
     letter-spacing: -0.3483240008354187px !important;
     text-align: center !important;
-    float: right;
-    margin-right: 100px;
 }
 
 @media (max-width: 1024px) {
@@ -290,10 +334,8 @@
         grid-row-gap: 8px;
     }
 
-    .partnersBottom {
-        display: flex;
-        flex-direction: column;
-        gap: 40px;
+    .mentorsTitle {
+        justify-content: space-between;
     }
 
     .partner {
@@ -302,11 +344,6 @@
 
     .partnersCaption {
         margin: 0
-    }
-
-    .partnersButton {
-        width: 100% !important;
-        margin-top: 28px;
     }
 
     .expectationsWrapper {
