--- a/components/mentor-card/mentor-card.module.css
+++ b/components/mentor-card/mentor-card.module.css
@@ -13,10 +13,11 @@
 }
 
 .texts {
-    font-family: var(--font-inter);
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 22px;
+    font-family: var(--font-inter-tight);
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28px;
+    text-align: left;
     margin: 20px 0 10px;
     color: rgba(255, 255, 255, 0.7);
 }
@@ -28,14 +29,13 @@
 
 @media (max-width: 767px) {
     .container {
-        padding: 16px 20px 4px 20px;
+        padding: 12px 8px;
     }
 
     .texts {
         font-family: var(--font-inter-tight);
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 19px;
+        font-size: 14px;
+        line-height: 18px;
         margin: 4px 0 0 0;
     }
 
