--- a/components/logo/logo.module.css
+++ b/components/logo/logo.module.css
@@ -23,3 +23,10 @@
     top: 10%;
     transform: translateX(-50%);
 }
+
+@media (max-width: 768px) {
+    .logoRotated > img,
+    .logo img {
+        width: 90px;
+    }
+}
