--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,13 +1,50 @@
+.background {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+}
+
+.backgroundMobile {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+}
+
+.wrapper {
+    overflow: hidden;
+    position: relative;
+}
+
+.footer {
+    background-color: #0e100f;
+}
+
 .container {
-    background: url("/background.svg") fixed;
+    /* background: url("/background.svg");
+    background-position-x: center;
+    background-size: 100%; */
     padding: 0 10px 80px 10px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .logo {
     width: 100%;
-    aspect-ratio: 848/183;
+    aspect-ratio: 848/190;
     position: relative;
     z-index: 2;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-end;
+}
+
+.logo img {
+    width: 100%;
 }
 
 .triangleWrapper {
@@ -45,18 +82,33 @@
     box-sizing: border-box;
 }
 
+.marginCenter {
+    margin: 0 auto;
+}
+
 .mt30 {
     margin-top: 30px;
 }
 
 .triangleCaption {
+    margin-top: 16px;
     font-family: var(--font-inter);
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
     text-align: right;
-    color: #1D30DB;
-    align-self: end;
+    /* color: #1D30DB; */
+    /* align-self: end; */
+}
+
+.aboveApply {
+    display: flex;
+    padding-top: 30px;
+    font-family: var(--font-inter-tight);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    /* text-align: right; */
 }
 
 .caption {
@@ -80,7 +132,7 @@
     font-size: 28px;
     font-weight: 500;
     line-height: 33px;
-    text-align: left;
+    text-align: center;
 }
 
 .subtitleBold {
@@ -121,12 +173,14 @@
     display: grid;
     grid-template-columns: 1.2fr 2fr;
     grid-column-gap: 20px;
+    align-items: center;
 }
 
 .partnersTriangles {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-bottom: 45px;
 }
 
 .partners {
@@ -145,18 +199,35 @@
     margin-left: 50px;
 }
 
-.partnersInfo {
+.partnersInfo {}
+
+.partnersInfoContainer {
+    border: #FFFFFF 1px solid;
+    background-color: #0E100F;
+    border-radius: 13px;
+    padding: 25px 32px;
     display: flex;
     flex-direction: column;
+    gap: 20px;
+    margin-top: 5px;
+}
+
+.partnerItem {
+    margin-bottom: 16px;
+}
+
+.partnerItem:last-child {
+    margin-bottom: 0;
 }
 
 .partnersList {
-    margin-top: 0;
+    margin-top: 4px;
     font-family: var(--font-inter-tight);
     font-size: 18px;
     font-weight: 400;
-    line-height: 22px;
-    text-align: left;
+    line-height: 24px;
+    text-align: center;
+    margin-bottom: 0;
 }
 
 .expectationsWrapper {
@@ -213,6 +284,14 @@
 }
 
 .expectationsCaptions {
+
+}
+
+.expectationsCaptionsContainer {
+    border: #FFFFFF 1px solid;
+    background-color: #0E100F;
+    border-radius: 13px;
+    padding: 25px 32px;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -224,7 +303,7 @@
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 24px;
     margin-top: 100px;
-    padding: 0 54px;
+    /* padding: 0 54px; */
 }
 
 .faqCol {
@@ -235,24 +314,25 @@
 
 .borderedList {
     border: #FFFFFF 1px solid;
+    background-color: #0E100F;
     border-radius: 13px;
-    padding: 32px 16px;
+    padding: 25px 32px;
     margin-left: 10px;
     margin-top: 20px;
-    background-color: #0E100F;
     font-family: var(--font-inter-tight);
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24px;
     text-align: left;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
 }
 
 .borderedListTextBold {
     font-family: var(--font-inter-tight);
-    font-size: 20px;
+    font-style: normal;
     font-weight: 700;
+    font-size: 18px;
     line-height: 24px;
-    text-align: left;
 }
 
 .faqButton {
@@ -265,10 +345,31 @@
 
 .list {
     margin-top: 0;
+    margin-bottom: 0;
+    list-style-type: none;
+    padding: 0;
+}
+
+.list li{
+    position: relative; /* Для абсолютного позиционирования маркера */
+    padding-left: 20px; /* Отступ для маркера */
+}
+
+.list li::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0.4em;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 10px solid white; /* Цвет треугольника */
 }
 
 .bottomText {
-    padding: 40px 100px;
+    padding-top: 100px;
+    /* padding: 100px 100px 40px; */
     font-family: var(--font-menlo);
     color: #1D30DB;
 }
@@ -277,18 +378,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 60px 100px 0 100px;
+    margin-top: 100px;
 }
 
 .sns {
     display: flex;
     gap: 100px;
+}
+
+.sns a {
     font-family: var(--font-fira-mono);
+    color: #1D30DB;
     font-size: 24px;
     font-weight: 500;
     line-height: 36px;
     text-align: left;
-    color: #1D30DB;
+    text-decoration: none;
 }
 
 .getInTouchButton {
@@ -301,28 +406,54 @@
     text-align: center !important;
 }
 
+@media (max-width: 1140px) {
+    .mentors {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
 @media (max-width: 1024px) {
     .partner {
         margin-left: -70px;
     }
+
+    .mentors {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
 
 @media (max-width: 767px) {
+    .backgroundMobile {
+        display: block;
+    }
+
+    .background {
+        display: none;
+    }
+
+    .noMobileMargin {
+        margin-top: 0
+    }
+
+    .expectationsTriangleMain {
+        width: 100%;
+        height: auto;
+    }
+
     .container {
-        background: url("/background_mobile.svg");
         padding: 0 30px 80px 30px;
     }
 
     .triangle {
         margin-top: -100px;
         margin-left: -120px;
-        width: 100%;
+        /* width: 100%; */
     }
 
     .triangleImageWrapper {
-        width: 100%;
-        height: auto;
-        aspect-ratio: 596/544;
+        /* width: 100%; */
+        /* height: auto; */
+        /* aspect-ratio: 596/544; */
     }
 
     .triangleContent {
@@ -332,9 +463,14 @@
     }
 
     .triangleCaption {
+        margin-top: 8px;
         font-size: 14px;
         line-height: 17px;
-        align-self: start;
+        max-width: 150px;
+    }
+
+    .triangleCaption br {
+        display: none;
     }
 
     .title {
@@ -362,12 +498,17 @@
         justify-content: space-between;
     }
 
+    .partnersTriangles {
+        margin-bottom: 0;
+    }
+
     .partnersBlock {
         display: flex;
         flex-direction: column-reverse;
+        align-items: initial;
     }
 
-    .partnersInfo {
+    .partnersInfoContainer {
         gap: 20px;
         margin-top: 20px;
     }
@@ -425,7 +566,8 @@
     .borderedList {
         font-size: 18px;
         line-height: 22px;
-        margin-right: 20px;
+        margin-left: 0;
+        margin-right: 0;
         border-radius: 32px;
     }
 
@@ -447,8 +589,11 @@
     }
 
     .sns {
+        gap: 20px;
+    }
+
+    .sns a {
         font-size: 18px;
         line-height: 36px;
-        gap: 40px;
     }
 }
