--- a/app/page.module.css
+++ b/app/page.module.css
@@ -75,6 +75,9 @@
     font-weight: 400;
     line-height: 21px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
 }
 
 .fullWidthButton {
