--- a/app/page.module.css
+++ b/app/page.module.css
@@ -69,15 +69,19 @@
     bottom: 60px;
     left: 50%;
     transform: translateX(-50%);
-    max-width: 314px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+
+.triangleContentText {
     font-family: var(--font-fira-mono);
     font-size: 18px;
     font-weight: 400;
     line-height: 21px;
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: 80px;
 }
 
 .fullWidthButton {
@@ -482,10 +486,11 @@
         /* aspect-ratio: 596/544; */
     }
 
-    .triangleContent {
+    .triangleContentText {
         font-size: 16px;
         line-height: 19px;
         text-align: left;
+        padding-left: 50px;
     }
 
     .triangleCaption {
