--- a/app/page.module.css
+++ b/app/page.module.css
@@ -378,7 +378,7 @@
     padding-top: 100px;
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 140px;
 }
 
 .bottomPartners {
@@ -386,7 +386,8 @@
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
     grid-gap: 64px 32px;
-    margin-top: 30px;
+    margin-top: 64px;
+    opacity: 0.7;
 }
 
 .bottomPartnerImage, .bottomPartnerImageWhite {
